[#2063] Fix for table fields text overflow

--- a/theme/static/css/hydroshare_core.css
+++ b/theme/static/css/hydroshare_core.css
@@ -1045,6 +1045,11 @@ table.info-table {
 	padding-bottom: 8px;
 }
 
+.custom-table td {
+	word-break: break-all;
+	word-wrap: break-word;
+}
+
 #txt-title {
 	font-size: 27px;
 	height: auto;
